Further development and selection

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -32,3 +32,12 @@
 	Publisher = {Penguin UK},
 	Title = {The filter bubble: What the Internet is hiding from you},
 	Year = {2011}}
+
+@inproceedings{hannak2013,
+	author = {Aniko Hannak and Piotr Sapie.{z}y'{n}ski and Arash Molavi Kakhki and Balachander Krishnamurthy and David Lazer and Alan Mislove and Christo Wilson},
+	title = {Measuring Personalization of Web Search},
+	booktitle = {Proceedings of the Twenty-Second International World Wide Web Conference (WWW'13)},
+	address = {Rio de Janeiro, Brazil},
+	month = {05},
+	year = {2013}
+}
