Define "political pluralism"

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -13,7 +13,8 @@
 	Date-Modified = {2016-11-29 17:47:56 +0000},
 	Journal = {New York Times Sunday Book Review},
 	Title = {Your Own Facts},
-	Year = {2011}}
+	Year = {2011}
+}
 
 @article{bakshy2015,
 	Author = {Bakshy, Eytan and Messing, Solomon and Adamic, Lada A},
@@ -23,7 +24,8 @@
 	Number = {6239},
 	Title = {Exposure to ideologically diverse news and opinion on Facebook},
 	Volume = {348},
-	Year = {2015}}
+	Year = {2015}
+}
 
 @book{pariser2011,
 	Author = {Pariser, Eli},
@@ -31,7 +33,8 @@
 	Date-Modified = {2016-11-29 17:46:59 +0000},
 	Publisher = {Penguin UK},
 	Title = {The filter bubble: What the Internet is hiding from you},
-	Year = {2011}}
+	Year = {2011}
+}
 
 @inproceedings{hannak2013,
 	author = {Aniko Hannak and Piotr Sapie.{z}y'{n}ski and Arash Molavi Kakhki and Balachander Krishnamurthy and David Lazer and Alan Mislove and Christo Wilson},
@@ -40,4 +43,13 @@
 	address = {Rio de Janeiro, Brazil},
 	month = {05},
 	year = {2013}
+}
+
+@article{leuven2009,
+    title={Independent study on indicators for media pluralism in the member states—Towards a risk-based approach},
+    author={Leuven, Katholieke Universitet and others},
+    journal={Prepared for the European Commission Directorate-General Information Society and Media.},
+    volume={19},
+    pages={2009},
+    year={2009}
 }
