Updates about algorithm transparency and quote by Merkel

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2,10 +2,22 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Pietro De Nicolao at 2016-11-29 18:49:12 +0100
+%% Created for Pietro De Nicolao at 2016-12-04 10:36:42 +0100 
 
 
-%% Saved with string encoding Unicode (UTF-8)
+%% Saved with string encoding Unicode (UTF-8) 
+
+
+
+@article{merkel2016,
+	Author = {Kate Connolly},
+	Date-Added = {2016-12-04 09:31:09 +0000},
+	Date-Modified = {2016-12-04 09:36:40 +0000},
+	Journal = {The Guardian},
+	Month = {10},
+	Title = {Angela Merkel: internet search engines are 'distorting perception'},
+	Url = {https://www.theguardian.com/world/2016/oct/27/angela-merkel-internet-search-engines-are-distorting-our-perception},
+	Year = {2016}}
 
 @article{morozov2011,
 	Author = {Morozov, Evgeny},
@@ -13,8 +25,7 @@
 	Date-Modified = {2016-11-29 17:47:56 +0000},
 	Journal = {New York Times Sunday Book Review},
 	Title = {Your Own Facts},
-	Year = {2011}
-}
+	Year = {2011}}
 
 @article{bakshy2015,
 	Author = {Bakshy, Eytan and Messing, Solomon and Adamic, Lada A},
@@ -24,8 +35,7 @@
 	Number = {6239},
 	Title = {Exposure to ideologically diverse news and opinion on Facebook},
 	Volume = {348},
-	Year = {2015}
-}
+	Year = {2015}}
 
 @book{pariser2011,
 	Author = {Pariser, Eli},
@@ -33,23 +43,20 @@
 	Date-Modified = {2016-11-29 17:46:59 +0000},
 	Publisher = {Penguin UK},
 	Title = {The filter bubble: What the Internet is hiding from you},
-	Year = {2011}
-}
+	Year = {2011}}
 
 @inproceedings{hannak2013,
-	author = {Aniko Hannak and Piotr Sapie.{z}y'{n}ski and Arash Molavi Kakhki and Balachander Krishnamurthy and David Lazer and Alan Mislove and Christo Wilson},
-	title = {Measuring Personalization of Web Search},
-	booktitle = {Proceedings of the Twenty-Second International World Wide Web Conference (WWW'13)},
-	address = {Rio de Janeiro, Brazil},
-	month = {05},
-	year = {2013}
-}
+	Address = {Rio de Janeiro, Brazil},
+	Author = {Aniko Hannak and Piotr Sapie.{z}y'{n}ski and Arash Molavi Kakhki and Balachander Krishnamurthy and David Lazer and Alan Mislove and Christo Wilson},
+	Booktitle = {Proceedings of the Twenty-Second International World Wide Web Conference (WWW'13)},
+	Month = {05},
+	Title = {Measuring Personalization of Web Search},
+	Year = {2013}}
 
 @article{leuven2009,
-    title={Independent study on indicators for media pluralism in the member states—Towards a risk-based approach},
-    author={Leuven, Katholieke Universitet and others},
-    journal={Prepared for the European Commission Directorate-General Information Society and Media.},
-    volume={19},
-    pages={2009},
-    year={2009}
-}
+	Author = {Leuven, Katholieke Universitet and others},
+	Journal = {Prepared for the European Commission Directorate-General Information Society and Media.},
+	Pages = {2009},
+	Title = {Independent study on indicators for media pluralism in the member states---Towards a risk-based approach},
+	Volume = {19},
+	Year = {2009}}
