Cuts & reordering of slide
* Better definition of "filter bubble" (updated bibliography.bib)
* Shortened some slides
* Reordered some content
* Deleted a couple of less-interesting slides

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2,19 +2,27 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Pietro De Nicolao at 2016-12-07 11:42:17 +0100
+%% Created for Pietro De Nicolao at 2016-12-10 12:15:09 +0100 
 
 
-%% Saved with string encoding Unicode (UTF-8)
+%% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@electronic{whatis,
+	Author = {Matthew Haughn},
+	Date-Added = {2016-12-10 11:13:04 +0000},
+	Date-Modified = {2016-12-10 11:15:07 +0000},
+	Title = {"filter bubble" - WhatIs.com},
+	Url = {http://whatis.techtarget.com/definition/filter-bubble},
+	Urldate = {2015}}
 
 @misc{censis2016,
 	Author = {CENSIS},
 	Date-Added = {2016-12-07 10:41:07 +0000},
 	Date-Modified = {2016-12-07 10:42:11 +0000},
 	Howpublished = {\url{http://www.censis.it/7?shadow_comunicato_stampa=121073}},
-	Title = {13° Rapporto Censis-Ucsi sulla comunicazione},
+	Title = {13$\,^{\circ}$ Rapporto Censis-Ucsi sulla comunicazione},
 	Year = {2016}}
 
 @article{morozov2011,
