--- a/header.tex
+++ b/header.tex
@@ -22,3 +22,8 @@
         \setlength{\parsep}{\bibparsep}}}
     {\endlist}
     {\item}
+
+
+% Smaller font for bibliography
+
+\renewcommand*{\bibfont}{\footnotesize}
